exports[`DisplayLarge should render with default title property (name) 1`] = `
<div
  className={undefined}>
  <div
    className="panel panel-default">
    <button
      className="btn btn-link"
      onClick={[Function]}
      role="link">
      <i
        aria-hidden="true"
        className="fa fa-file-excel-o"
        title={null} />
      Hello world
    </button>
    <div
      className="tc-actions btn-group">
      <button
        aria-describedby={42}
        className="btn btn-link"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="link"
        type="button">
        <i
          className="fa fa-edit" />
      </button>
      <button
        aria-describedby={42}
        className="btn btn-link"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="link"
        type="button">
        <i
          className="fa fa-trash-o" />
      </button>
    </div>
    <div
      className={undefined}>
      <ul>
        <li>
          <span
            className={undefined}>
            Id
          </span>
          <span
            className={undefined}>
            1
          </span>
        </li>
        <li>
          <span
            className={undefined}>
            Author
          </span>
          <span
            className={undefined}>
            Jean-Pierre DUPONT
          </span>
        </li>
      </ul>
      <ul>
        <li>
          <span
            className={undefined}>
            Created
          </span>
          <span
            className={undefined}>
            2016-09-22
          </span>
        </li>
        <li>
          <span
            className={undefined}>
            Modified
          </span>
          <span
            className={undefined}>
            2016-09-22
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="panel panel-default">
    <button
      className="btn btn-link"
      onClick={[Function]}
      role="link">
      <i
        aria-hidden="true"
        className="fa fa-file-pdf-o"
        title={null} />
      Foo
    </button>
    <div
      className="tc-actions btn-group" />
    <div
      className={undefined}>
      <ul>
        <li>
          <span
            className={undefined}>
            Id
          </span>
          <span
            className={undefined}>
            2
          </span>
        </li>
        <li>
          <span
            className={undefined}>
            Author
          </span>
          <span
            className={undefined}>
            Jean-Pierre DUPONT
          </span>
        </li>
      </ul>
      <ul>
        <li>
          <span
            className={undefined}>
            Created
          </span>
          <span
            className={undefined}>
            2016-09-22
          </span>
        </li>
        <li>
          <span
            className={undefined}>
            Modified
          </span>
          <span
            className={undefined}>
            2016-09-22
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="panel panel-default">
    <button
      className="btn btn-link"
      onClick={[Function]}
      role="link">
      Bar
    </button>
    <div
      className="tc-actions btn-group" />
    <div
      className={undefined}>
      <ul>
        <li>
          <span
            className={undefined}>
            Id
          </span>
          <span
            className={undefined}>
            2
          </span>
        </li>
        <li>
          <span
            className={undefined}>
            Author
          </span>
          <span
            className={undefined}>
            Jean-Pierre DUPONT
          </span>
        </li>
      </ul>
      <ul>
        <li>
          <span
            className={undefined}>
            Created
          </span>
          <span
            className={undefined}>
            2016-09-22
          </span>
        </li>
        <li>
          <span
            className={undefined}>
            Modified
          </span>
          <span
            className={undefined}>
            2016-09-22
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`DisplayLarge should render with defined title property 1`] = `
<div
  className={undefined}>
  <div
    className="panel panel-default">
    <button
      className="btn btn-link"
      onClick={[Function]}
      role="link">
      <i
        aria-hidden="true"
        className="fa fa-file-excel-o"
        title={null} />
      1
    </button>
    <div
      className="tc-actions btn-group">
      <button
        aria-describedby={42}
        className="btn btn-link"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="link"
        type="button">
        <i
          className="fa fa-edit" />
      </button>
      <button
        aria-describedby={42}
        className="btn btn-link"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="link"
        type="button">
        <i
          className="fa fa-trash-o" />
      </button>
    </div>
    <div
      className={undefined}>
      <ul>
        <li>
          <span
            className={undefined}>
            Name
          </span>
          <span
            className={undefined}>
            Hello world
          </span>
        </li>
        <li>
          <span
            className={undefined}>
            Author
          </span>
          <span
            className={undefined}>
            Jean-Pierre DUPONT
          </span>
        </li>
      </ul>
      <ul>
        <li>
          <span
            className={undefined}>
            Created
          </span>
          <span
            className={undefined}>
            2016-09-22
          </span>
        </li>
        <li>
          <span
            className={undefined}>
            Modified
          </span>
          <span
            className={undefined}>
            2016-09-22
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="panel panel-default">
    <button
      className="btn btn-link"
      onClick={[Function]}
      role="link">
      <i
        aria-hidden="true"
        className="fa fa-file-pdf-o"
        title={null} />
      2
    </button>
    <div
      className="tc-actions btn-group" />
    <div
      className={undefined}>
      <ul>
        <li>
          <span
            className={undefined}>
            Name
          </span>
          <span
            className={undefined}>
            Foo
          </span>
        </li>
        <li>
          <span
            className={undefined}>
            Author
          </span>
          <span
            className={undefined}>
            Jean-Pierre DUPONT
          </span>
        </li>
      </ul>
      <ul>
        <li>
          <span
            className={undefined}>
            Created
          </span>
          <span
            className={undefined}>
            2016-09-22
          </span>
        </li>
        <li>
          <span
            className={undefined}>
            Modified
          </span>
          <span
            className={undefined}>
            2016-09-22
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="panel panel-default">
    <button
      className="btn btn-link"
      onClick={[Function]}
      role="link">
      2
    </button>
    <div
      className="tc-actions btn-group" />
    <div
      className={undefined}>
      <ul>
        <li>
          <span
            className={undefined}>
            Name
          </span>
          <span
            className={undefined}>
            Bar
          </span>
        </li>
        <li>
          <span
            className={undefined}>
            Author
          </span>
          <span
            className={undefined}>
            Jean-Pierre DUPONT
          </span>
        </li>
      </ul>
      <ul>
        <li>
          <span
            className={undefined}>
            Created
          </span>
          <span
            className={undefined}>
            2016-09-22
          </span>
        </li>
        <li>
          <span
            className={undefined}>
            Modified
          </span>
          <span
            className={undefined}>
            2016-09-22
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
